--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "shopgenix",
-  "homepage": "http://coder-alair.github.io/shopGenix",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,9 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"nodemon services.js\" \"react-scripts start\"",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -50,8 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
   }
+  
 }
